# siri-bot

./: Cargo.toml
src/: init.rs  lib.rs  main.rs
src/appdata/: mod.rs  session.rs
src/commands/: mod.rs
src/commands/community/: mod.rs
src/commands/community/giveaway/: create.rs  mod.rs
src/commands/community/poll/: mod.rs
src/commands/general/: embed.rs  mod.rs  ping.rs  prefix.rs  say.rs  uptime.rs
src/config/: main.rs  mod.rs
src/handlers/: after.rs  before.rs  handler.rs  help.rs  mod.rs  shardmanagercontainer.rs
src/structs/: mod.rs
src/structs/config/: main.rs  mod.rs  styles.rs
src/structs/functions/: duration_string_fn.rs  get_message_fn.rs  mod.rs
src/structs/global/: mod.rs
src/structs/global/giveaways/: giveaways.rs
storage/config/: main.yml  styles.yml
storage/data/global/giveaways/: index.json
