[package]
name = "siri-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1"
dotenv = "0.15"
tracing-subscriber = "0.3"
serde_yaml = "0.8"
serde_json = "1.0"
futures = "0.3"
duration-string = "0.1"
chrono = "0.4"
rand = "0.8"

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serde]
version = "1.0"
features = ["derive"]